package com.example.movie_rating_service.model.enums;

import lombok.Getter;

@Getter
public enum EventType {
    LIKE, REVIEW, GRADE;

}
