-- MySQL Script generated by MySQL Workbench
-- Wed Oct 18 19:31:09 2023
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema mrsdb
-- -----------------------------------------------------

-- -----------------------------------------------------
-- Schema mrsdb
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `mrsdb` DEFAULT CHARACTER SET utf8 ;
USE `mrsdb` ;

-- -----------------------------------------------------
-- Table `mrsdb`.`USERS`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mrsdb`.`USERS` (
                                               `user_id` INT NOT NULL AUTO_INCREMENT,
                                               `email` VARCHAR(45) NOT NULL,
                                               `login` VARCHAR(15) NOT NULL,
                                               `password` VARCHAR(15) NOT NULL,
                                               PRIMARY KEY (`user_id`),
                                               UNIQUE INDEX `user_id_UNIQUE` (`user_id` ASC) VISIBLE,
                                               UNIQUE INDEX `login_UNIQUE` (`login` ASC) VISIBLE,
                                               UNIQUE INDEX `email_UNIQUE` (`email` ASC) VISIBLE,
                                               UNIQUE INDEX `password_UNIQUE` (`password` ASC) VISIBLE)
    ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mrsdb`.`RATINGS`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mrsdb`.`RATINGS` (
                                                 `rating_id` INT NOT NULL AUTO_INCREMENT,
                                                 `rating_name` VARCHAR(45) NOT NULL,
                                                 PRIMARY KEY (`rating_id`))
    ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mrsdb`.`FILMS`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mrsdb`.`FILMS` (
                                               `film_id` INT NOT NULL AUTO_INCREMENT,
                                               `film_name` VARCHAR(100) NOT NULL,
                                               `film_image_url` VARCHAR(200) NOT NULL,
                                               `description` VARCHAR(500) NOT NULL,
                                               `director` VARCHAR(45) NOT NULL,
                                               `release_date` DATETIME NOT NULL,
                                               `duration` INT NOT NULL,
                                               `average_rating` DOUBLE NOT NULL,
                                               `rating_id` INT NOT NULL,
                                               `genre_id` INT NOT NULL,
                                               PRIMARY KEY (`film_id`, `film_name`, `rating_id`, `genre_id`),
                                               INDEX `fk_film_rating_id_idx` (`rating_id` ASC) VISIBLE,
                                               CONSTRAINT `fk_film_rating_id`
                                                   FOREIGN KEY (`rating_id`)
                                                       REFERENCES `mrsdb`.`RATINGS` (`rating_id`)
                                                       ON DELETE CASCADE
                                                       ON UPDATE NO ACTION)
    ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mrsdb`.`FILM_LIKES`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mrsdb`.`FILM_LIKES` (
                                                    `film_id` INT NOT NULL AUTO_INCREMENT,
                                                    `user_id` INT NOT NULL,
                                                    PRIMARY KEY (`film_id`, `user_id`),
                                                    INDEX `fk_films_likes_user_id_idx` (`user_id` ASC) VISIBLE,
                                                    CONSTRAINT `fk_films_likes_film_id`
                                                        FOREIGN KEY (`film_id`)
                                                            REFERENCES `mrsdb`.`FILMS` (`film_id`)
                                                            ON DELETE CASCADE
                                                            ON UPDATE NO ACTION,
                                                    CONSTRAINT `fk_films_likes_user_id`
                                                        FOREIGN KEY (`user_id`)
                                                            REFERENCES `mrsdb`.application_users (`user_id`)
                                                            ON DELETE CASCADE
                                                            ON UPDATE NO ACTION)
    ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mrsdb`.`EVENTS`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mrsdb`.`EVENTS` (
                                                `event_id` INT NOT NULL AUTO_INCREMENT,
                                                `event_timestamp` INT NOT NULL,
                                                `user_id` INT NOT NULL,
                                                `event_tipe` ENUM('LIKE', 'REVIEW', 'GRADE') NOT NULL,
                                                `operation` ENUM('REMOVE', 'ADD', 'UPDATE') NOT NULL,
                                                `entity_id` INT NOT NULL,
                                                PRIMARY KEY (`event_id`, `user_id`),
                                                UNIQUE INDEX `event_id_UNIQUE` (`event_id` ASC) VISIBLE,
                                                INDEX `fk_events_user_id_idx` (`user_id` ASC) VISIBLE,
                                                CONSTRAINT `fk_events_user_id`
                                                    FOREIGN KEY (`user_id`)
                                                        REFERENCES `mrsdb`.application_users (`user_id`)
                                                        ON DELETE CASCADE
                                                        ON UPDATE NO ACTION)
    ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mrsdb`.`GRADES`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mrsdb`.`GRADES` (
                                                `user_id` INT NOT NULL,
                                                `film_id` INT NOT NULL,
                                                `grade_by_user` INT NOT NULL,
                                                PRIMARY KEY (`user_id`, `film_id`),
                                                INDEX `fk_grades_user_id_idx` (`user_id` ASC) VISIBLE,
                                                INDEX `fr_grades_film_id_idx` (`film_id` ASC) VISIBLE,
                                                CONSTRAINT `fk_grades_user_id`
                                                    FOREIGN KEY (`user_id`)
                                                        REFERENCES `mrsdb`.application_users (`user_id`)
                                                        ON DELETE CASCADE
                                                        ON UPDATE NO ACTION,
                                                CONSTRAINT `fr_grades_film_id`
                                                    FOREIGN KEY (`film_id`)
                                                        REFERENCES `mrsdb`.`FILMS` (`film_id`)
                                                        ON DELETE CASCADE
                                                        ON UPDATE NO ACTION)
    ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mrsdb`.`REVIEWS`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mrsdb`.`REVIEWS` (
                                                 `review_id` INT NOT NULL AUTO_INCREMENT,
                                                 `film_id` INT NOT NULL,
                                                 `user_id` INT NOT NULL,
                                                 `review` VARCHAR(500) NOT NULL,
                                                 PRIMARY KEY (`review_id`, `film_id`, `user_id`),
                                                 UNIQUE INDEX `film_id_UNIQUE` (`film_id` ASC) VISIBLE,
                                                 UNIQUE INDEX `user_id_UNIQUE` (`user_id` ASC) VISIBLE,
                                                 CONSTRAINT `fk_reviews_film_id`
                                                     FOREIGN KEY (`film_id`)
                                                         REFERENCES `mrsdb`.`FILMS` (`film_id`)
                                                         ON DELETE CASCADE
                                                         ON UPDATE NO ACTION,
                                                 CONSTRAINT `fk_reviews_user_id`
                                                     FOREIGN KEY (`user_id`)
                                                         REFERENCES `mrsdb`.application_users (`user_id`)
                                                         ON DELETE CASCADE
                                                         ON UPDATE NO ACTION)
    ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mrsdb`.`GENRES`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mrsdb`.`GENRES` (
                                                `genre_id` INT NOT NULL AUTO_INCREMENT,
                                                `genre_name` VARCHAR(45) NOT NULL,
                                                PRIMARY KEY (`genre_id`))
    ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mrsdb`.`FILMS_GENRES`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `mrsdb`.`FILMS_GENRES` (
                                                      `film_id` INT NOT NULL AUTO_INCREMENT,
                                                      `genre_id` INT NOT NULL,
                                                      PRIMARY KEY (`film_id`, `genre_id`),
                                                      INDEX `fk_films_genres_genre_id_idx` (`genre_id` ASC) VISIBLE,
                                                      CONSTRAINT `fk_films_genres_film_id`
                                                          FOREIGN KEY (`film_id`)
                                                              REFERENCES `mrsdb`.`FILMS` (`film_id`)
                                                              ON DELETE CASCADE
                                                              ON UPDATE NO ACTION,
                                                      CONSTRAINT `fk_films_genres_genre_id`
                                                          FOREIGN KEY (`genre_id`)
                                                              REFERENCES `mrsdb`.`GENRES` (`genre_id`)
                                                              ON DELETE CASCADE
                                                              ON UPDATE NO ACTION)
    ENGINE = InnoDB;


SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;
